--- a/css/post.css
+++ b/css/post.css
@@ -32,3 +32,21 @@
   margin-bottom: 2em;
   margin-top: 1em;
 }
+
+#content .hiring {
+  border: solid;
+  padding: 1em;
+  background-color: rgb(144, 238, 144);
+  text-align: center;
+  margin-bottom: 2em;
+  margin-top: 1em;
+}
+
+#content .contact {
+  border: solid;
+  padding: 1em;
+  background-color: rgb(255, 238, 144);
+  text-align: left;
+  margin-bottom: 2em;
+  margin-top: 1em;
+}
